<resources>
    <string name="app_name">Coach Me</string>
    <string name="statsTitle">Stats</string>
    <string name="homeTitle">Home</string>
    <string name="ordersTitle">Orders</string>
    <string name="profileTitle">Profile</string>
    <string name="addTitle">add</string>
    <string name="navBarAddButton">addWorkout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btnLogIn">Log In</string>
    <string name="btnLogOut">Log Out</string>
    <string name="btnConfitm">Confirm</string>
    <string name="btnAccountExist">Already Have an account? Click here</string>
    <string name="txtsignin">Sign in</string>
    <string name="txtCreateAccount">Create Account</string>
    <string name="btnNext_">Next</string>
    <string name="txtCreateCoachmeAccount">Create a Coachme account</string>
    <string name="facebook_app_id">1671473303313437</string>
    <string name="fb_login_protocol_scheme">fb1671473303313437</string>
    <string name="facebook_client_token">56789</string>
    <string name="txtresettitle">Reset Your password</string>
    <string name="btnReset">Reset</string>
    <string name="btnRegister">Register</string>
    <string name="txtBacktoLogIn">Back to Sign In</string>
    <string name="txtGetCurrentLoc">Get Current Location</string>
    <string name="txtForgetPass">Forgot Password?</string>
    <string name="NoSpeakableText">Some Speakable Text</string>
    <string name="tranerNameText">Trainer Name</string>
    <string name="trainerBioText">Trainer Bio</string>
    <string name="tvTrainingRating">Stars</string>
    <string name="tvPriceHourText">XX CAD</string>
    <string name="btnTrainerSeeAppTable"></string>
    <string name="crossfit">Crossfit</string>
    <string name="txtOrderBy">Sort By</string>
    <string name="martial">Martial</string>
    <string name="yoga">Yoga</string>
    <string name="pilates">Pilates</string>
    <string name="statsTitleOverImage">Your Stats</string>
    <string name="noHistoryText">Today is the perfect day to start training!</string>
    <string name="txtEditProfile">Edit Profile</string>
    <string name="txtSignOut">Sign Out </string>
    <string name="btnSave">Save</string>
    <string name="btnCancle">cancle</string>
    <string name="tvAppAddDetailsPrompt">"Meet at "</string>
    <string-array name="dummytimes">
        <item>8am</item>
        <item>10am</item>
        <item>11am</item>
        <item>12am</item>
        <item>4pm</item>
        <item>6pm</item>
        <item>7pm</item>
        <item>8pm</item>
        <item>9pm</item>
    </string-array>
    <string-array name="sortByOptions">
        <item>Rating</item>
        <item>Price</item>
        <item>Distance</item>
    </string-array>
</resources>