<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/homeTitle"
        android:id="@+id/menu_home"
        android:icon="@drawable/baseline_home_24"/>
    <item android:title="@string/statsTitle"
        android:id="@+id/menu_stats"
        android:icon="@drawable/baseline_insert_chart_outlined_24"/>
    <item android:title="@string/addTitle"
        android:id="@+id/menu_add"
        android:icon="@drawable/baseline_add_24"/>
    <item android:title="@string/ordersTitle"
        android:id="@+id/menu_orders"
        android:icon="@drawable/baseline_receipt_24"/>
    <item android:title="@string/profileTitle"
        android:id="@+id/menu_profile"
        android:icon="@drawable/baseline_person_24"/>

</menu>