<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:background="#FFFCFC"
    android:backgroundTint="#FFFFFF"
    tools:context=".presentation.trainermap.TrainerDetailsFragment">


    <ImageView
        android:id="@+id/ivTrainerPic"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        app:srcCompat="@drawable/baseline_person_24" />

    <LinearLayout
        android:id="@+id/llTrainerDetails"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="30dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTrainerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tranerNameText"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvTrainerBio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/trainerBioText" />

        <LinearLayout
            android:id="@+id/llTrainerRating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/llRating"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    app:srcCompat="@drawable/ic_cancel_white_18dp" />

                <TextView
                    android:id="@+id/tvTrainerRating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/tvTrainingRating"
                    android:textSize="12sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/tvPriceHour"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:text="@string/tvPriceHourText" />

            <Button
                android:id="@+id/btnTrainerSeeAppTable"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="0.2"
                android:backgroundTint="#173F51B5"
                android:text="@string/btnTrainerSeeAppTable"
                android:textColor="#4A4A48"
                android:textSize="11sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>
</FrameLayout>


