<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llTrainerCard"
    android:layout_width="match_parent"
    android:layout_height="120dp">

    <ImageView
        android:id="@+id/ivTrainerPic"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:layout_weight="0.3"
        app:srcCompat="@drawable/trainer" />

    <LinearLayout
        android:id="@+id/llTrainerDetails"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.7"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTrainerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tranerNameText"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvTrainerBio"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/trainerBioText" />

        <LinearLayout
            android:id="@+id/llTrainerRating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="68dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/llRating"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginStart="8dp"
                    android:layout_weight="0.6"
                    app:layout_constraintBottom_toTopOf="@+id/tvTrainerRating"
                    app:layout_constraintEnd_toStartOf="@+id/btnTrainerSeeAppTable"
                    app:layout_constraintHorizontal_bias="0.231"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.8"
                    app:srcCompat="@drawable/baseline_star_rate_24" />

                <TextView
                    android:id="@+id/tvTrainerRating"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="0.4"
                    android:text="@string/tvTrainingRating"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/btnTrainerSeeAppTable"
                    app:layout_constraintHorizontal_bias="0.08"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0" />

            </LinearLayout>

            <TextView
                android:id="@+id/tvPriceHour"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:text="@string/tvPriceHourText" />

            <Button
                android:id="@+id/btnTrainerSeeAppTable"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="0.2"
                android:backgroundTint="#173F51B5"
                android:text="@string/btnTrainerSeeAppTable"
                android:textColor="#4A4A48"
                android:textSize="8sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>