<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardViewTrainerDetails"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    app:cardCornerRadius="6dp"
    app:cardElevation="6dp"
    tools:context=".presentation.trainermap.TrainerDetailsFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivTrainerPic"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            app:srcCompat="@drawable/baseline_person_24" />

        <TextView
            android:id="@+id/tvTrainerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/ivTrainerPic"
            android:text="@string/tranerNameText"
            android:fontFamily="@font/poppins_regular"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvTrainerBio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvTrainerName"
            android:fontFamily="@font/poppins_regular"
            android:layout_toRightOf="@id/ivTrainerPic"
            android:layout_marginRight="45dp"
            android:text="@string/trainerBioText"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/tvPriceHour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/ivTrainerPic"
            android:fontFamily="@font/poppins_regular"
            android:layout_below="@id/tvTrainerBio"
            android:text="@string/tvPriceHourText" />

        <ImageView
            android:id="@+id/ivStarImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/ivTrainerPic"
            android:layout_below="@id/tvPriceHour"
            android:layout_marginTop="4dp"
            android:src="@drawable/rating_star_cyan" />

        <TextView
            android:id="@+id/tvTrainerRating"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvPriceHour"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/poppins_regular"
            android:layout_toRightOf="@id/ivStarImage"
            android:text="@string/tvTrainingRating"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btnCloseCard"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            app:icon="@drawable/ic_link_close" />

        <Button
            android:id="@+id/btnTrainerSeeAppTable"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_below="@id/btnCloseCard"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="2dp"
            android:layout_alignParentEnd="true"
            android:backgroundTint="#173F51B5"
            android:text="@string/btnTrainerSeeAppTable"
            android:textColor="#4A4A48"
            android:textSize="11sp"
            android:textStyle="bold"
            app:icon="@drawable/baseline_expand_more_24" />

        <RelativeLayout
            android:id="@+id/calLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvTrainerRating"
            android:visibility="gone">

            <com.bawp.coachme.model.CustomCalendarView
                android:id="@+id/cvDates"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                />

            <ListView
                android:id="@+id/lvTimes"
                android:layout_width="90dp"
                android:layout_height="240dp"
                android:layout_marginLeft="2dp"
                android:layout_toRightOf="@id/cvDates"
                >

            </ListView>

            <Spinner
                android:id="@+id/spinService"
                android:layout_width="90dp"
                android:layout_height="35dp"
                android:layout_below="@id/lvTimes"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="4dp"
                android:layout_toRightOf="@id/cvDates"/>

            <Button
                android:id="@+id/btnAddCart"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_below="@id/spinService"
                android:layout_toRightOf="@id/cvDates"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="20dp"
                app:icon="@drawable/baseline_add_shopping_cart_24"
                style = "@style/Widget.MaterialComponents.Button.TextButton"/>


        </RelativeLayout>
    </RelativeLayout>

</androidx.cardview.widget.CardView>


